--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,83 @@
-name: Build
-on: [push, pull_request]
+name: Build Kivy Applications
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  # Build job. Builds app for Android with Buildozer
+  build-linux:
+    name: Build Linux AppImage
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+
+      - name: Install build dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y python3-dev python3-pip build-essential git zip libffi-dev libssl-dev libegl1 libgles2-mesa-dev patchelf
+
+      - name: Install requirements
+        run: pip install -r requirements.txt
+
+      - name: Install buildozer
+        run: pip install buildozer
+
+      - name: Build AppImage
+        working-directory: app
+        run: |
+          buildozer init
+          buildozer -v linux release
+
+      - name: Upload Linux AppImage
+        uses: actions/upload-artifact@v3
+        with:
+          name: Linux-AppImage
+          path: app/bin/*.AppImage
+
+  build-windows:
+    name: Build Windows EXE
+    runs-on: windows-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+
+      - name: Install build dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Install buildozer
+        run: pip install buildozer
+
+      - name: Build Windows EXE
+        working-directory: app
+        run: |
+          buildozer init
+          buildozer -v windows release
+
+      - name: Upload Windows EXE
+        uses: actions/upload-artifact@v3
+        with:
+          name: Windows-EXE
+          path: app/bin/*.exe
+
   build-android:
     name: Build for Android
     runs-on: ubuntu-latest
