--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,20 +32,15 @@ jobs:
       - name: Install requirements
         run: pip install -r requirements.txt
 
-      - name: Install buildozer
-        run: pip install buildozer
-
-      - name: Build AppImage
-        working-directory: app
+      - name: Build Linux AppImage
         run: |
-          buildozer init
-          buildozer -v linux release
+          pyinstaller --name=kivy_stress_tester --onefile app/main.py
 
       - name: Upload Linux AppImage
         uses: actions/upload-artifact@v3
         with:
           name: Linux-AppImage
-          path: app/bin/*.AppImage
+          path: dist/kivy_stress_tester
 
   build-windows:
     name: Build Windows EXE
@@ -65,38 +60,45 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Install buildozer
-        run: pip install buildozer
-
       - name: Build Windows EXE
-        working-directory: app
         run: |
-          buildozer init
-          buildozer -v windows release
+          pyinstaller --name=kivy_stress_tester --onefile app/main.py
 
       - name: Upload Windows EXE
         uses: actions/upload-artifact@v3
         with:
           name: Windows-EXE
-          path: app/bin/*.exe
+          path: dist/kivy_stress_tester.exe
 
   build-android:
-    name: Build for Android
+    name: Build Android APK
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Build with Buildozer
-        uses: ArtemSBulgakov/buildozer-action@v1
-        id: buildozer
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          workdir: app
-          buildozer_version: stable
+          python-version: "3.9"
 
-      - name: Upload artifacts
+      - name: Install build dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y python3-dev python3-pip build-essential git zip openjdk-11-jdk libffi-dev libssl-dev
+          pip install --upgrade cython
+          pip install buildozer
+
+      - name: Build Android APK
+        working-directory: app
+        run: |
+          buildozer init
+          sed -i 's/^title = .*/title = kivy_stress_tester/' buildozer.spec
+          buildozer -v android release
+
+      - name: Upload Android APK
         uses: actions/upload-artifact@v3
         with:
-          name: package
-          path: ${{ steps.buildozer.outputs.filename }}
+          name: Android-APK
+          path: app/bin/*.apk
