--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,6 +89,7 @@ jobs:
           sudo apt install git zip unzip openjdk-17-jdk python3-pip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev cmake libffi-dev libssl-dev automake libltdl-dev
           wget http://security.ubuntu.com/ubuntu/pool/universe/n/ncurses/libtinfo5_6.3-2ubuntu0.1_amd64.deb
           sudo apt install ./libtinfo5_6.3-2ubuntu0.1_amd64.deb
+          pip install kivy.deps.angle
           export PATH=$PATH:~/.local/bin/
           pip install --upgrade cython
           pip install buildozer
@@ -96,6 +97,7 @@ jobs:
       - name: Build Android APK
         working-directory: app
         run: |
+          export KIVY_GL_BACKEND=angle_sdl2
           buildozer -v android release
 
       - name: Upload Android APK
